--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     
     <h1>Hola mundo</h1>
-    
+    <a href="tp-1/index.html">Actividad 1</a>
+    <a href="tp-2/index.html">Actividad 2</a>
   </body>
 </html>
