--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <html>
   <head>
-    <title></title>
+    <link href="css/index.css" rel="stylesheet" title="Default Style" />
+    <title>Sebastian Soliz</title>
   </head>
   <body>
-    
-    <h1>Hola mundo</h1>
-    <a href="tp-1/index.html">Actividad 1</a>
-    <a href="tp-2/index.html">Actividad 2</a>
+    <div class="barra">
+      <h2>Plataformas-Moviles</h2>
+    </div>
+    <div class="box">
+      <header>
+          <img src="img/perfil.png">
+          <h1>Sebastian Soliz</h1>
+          <h4>Programador inexperto</h4>
+      </header>
+      <article>
+          <h2>Actividades</h2>
+          <div class="act">
+            <a href="tp-1/index.html"><button><h3>Actividad 1</h3></button></a>
+            <a href="tp-2/index.html"><button><h3>Actividad 2</h3></button></a>
+            <a href="tp-3/index.html"><button><h3>Actividad 3</h3></button></a>
+  
+          </div>
+      </article>
+    </div>
   </body>
 </html>
